tambah fitur alamat dan data hewan